# AnonBeijingCompiler

./: .gitignore  .ignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  run.py  test.py
RaanaIR/: Cargo.toml
RaanaIR/src/: main.rs
SoyoCompiler/: Cargo.toml
SoyoCompiler/src/: main.rs
anon_armv8/: Cargo.toml
raana_ir/: Cargo.toml
raana_ir/src/: ir.rs  lib.rs  mir.rs  opt.rs
soyo_compiler/: Cargo.toml
soyo_compiler/src/: cli.rs  frontend.rs  main.rs  sysy.lalrpop
soyo_compiler/src/backend/: armv8.rs  mod.rs
soyo_compiler/src/backend/armv8/: codegen.rs  inst.rs  register.rs
soyo_compiler/src/backend/armv8/codegen/: asm_gen_context.rs  epilogue.rs  generate_asm.rs  register_alloc.rs  register_manager.rs
soyo_compiler/src/frontend/: ast.rs  items.rs  mod.rs  utils.rs
soyo_compiler/src/opt/: const_prop.rs  dce.rs  gvn.rs  sr.rs  ssa.rs  utils.rs
sysylib/: sylib.c  sylib.h
taki_mir/: Cargo.toml
taki_mir/src/: armv8.rs  lib.rs
tests/: test.py
tests/functional/: 20_rem.sy
tests/perf/: 01_mm1.out  01_mm2.out  01_mm3.out  03_sort1.out  03_sort3.out  conv2d-1.in  conv2d-2.in  conv2d-3.in  conv2d-3.sy  fft2.sy  h-1-01.out  h-1-02.out  h-1-03.out  h-4-01.in  h-4-01.out  h-4-02.in  h-4-02.out  h-4-03.in  h-4-03.out  h-5-01.out  h-5-02.out  h-5-03.out  h-5-03.sy  h-8-01.out  h-8-02.out  h-8-03.out  h-8-03.sy  huffman-01.in  huffman-01.out  huffman-02.in  huffman-02.out  huffman-03.in  huffman-03.out  knapsack_naive-2.sy  many_mat_cal-1.in  many_mat_cal-1.out  many_mat_cal-1.sy  many_mat_cal-2.in  many_mat_cal-2.out  (+13 more)
(+44 files in other folders)
