[package]
name = "soyo_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
raana_ir = { version = "0.1.0", path = "../raana_ir" }
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
clap = { version = "4.6.1", features = ["derive"] }
log = { version = "0.4.29" }
env_logger = { version = "0.11.10" }
num_enum = "0.7.6"

[build-dependencies]
lalrpop = "0.22.1"

[profile.release]
debug = true
incremental = true
